@startuml

class Renting{
    username: VarChar(100) <FK>
    address : VarChar(100) <FK>
    --
}

class Property{
 address: VarChar(100)
 --
 rent: Num(10,2)
 username: VarChar(100) <FK>
 picture : VarChar(100)
 description : text
}

class Renter{
 username: VarChar(100)
--
 password: VarChar(100)
}
Renter ||--o{ Renting
Renter ||--o{ Property
Property ||--o{ Renting


@enduml